# vitadeck-anki

./: .gitignore  FORMAT.md  LICENSE  PROJECT_RECAP.md  README.md  exporter.py  importer.py  requirements.txt  synth_cloze.py  task_plan.md
vita_app/: CMakeLists.txt  main.cpp
vita_app2/: CMakeLists.txt  audio.h  draw.h  font.h  main.cpp  sqlite3.h  test_primitives.cpp
vita_app2/sce_sys/livearea/contents/: template.xml
